# Clicker-peli

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaativuusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/htmlcov/: _home_kasperka__cache_pypoetry_virtualenvs_maksukortti-QnnjrAMs-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_kasperka__cache_pypoetry_virtualenvs_maksukortti-QnnjrAMs-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_kasperka__cache_pypoetry_virtualenvs_maksukortti-QnnjrAMs-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_kasperka__cache_pypoetry_virtualenvs_maksukortti-QnnjrAMs-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_kasperka__cache_pypoetry_virtualenvs_maksukortti-QnnjrAMs-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  _home_kasperka__cache_pypoetry_virtualenvs_maksukortti-QnnjrAMs-py3_8_lib_python3_8_site-packages__pytest__io___init___py.html  (+95 more)
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml  tasks.py
src/: event_queue.py  game_logic.py  game_loop.py  index.py
src/UI/: StartView.py
src/repositories/: save_game.py
src/tests/: game_logic_test.py  game_loop_test.py  save_game_test.py
src/ui/: colors.py  menu.py  shop.py  start_view.py
(+2 files in other folders)
